--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div id="pannello-info">
     <article>
       <h1>Echoes of Color</h1>
-      <p>TOMMASO RITA</p>
+      <p><a href="https://www.instagram.com/tommasorita_artist/" target="_blank">TOMMASO RITA</a></p>
       <hr>
       <p>
 Art reveals the invisible, intertwining sounds and colors in a sensory language.</p>
